<resources>
    <string name="app_name">loonatheapp</string>
    <string name="loona">LOOΠΔ</string>
    <string name="about">About</string>
    <string name="real_name">Real Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="debut_date">Debut Date</string>
    <string name="sub_unit">Sub-unit</string>
    <string name="color">Color</string>
    <string name="animal">Animal</string>
    <string name="about_description">Deta adalah mahasiswa Ilmu Komputer Universitas Pertamina, angkatan 2016.
        Deta juga merupakan Lead dari Google Developer Students Club chapter Universitas Pertamina batch 2019.
        Selain kuliah, Deta bekerja paruh waktu di ProcurA, software house yang mengembangkan produk E-Procurement,
        dengan posisi sebagai Front-end Developer. Deta juga merupakan peserta Tokopedia DevCamp 2019, dan bersama
        dengan timnya, memenangkan juara kedua pada Hackathon Tokopedia DevCamp 2019.</string>
    <string name="about_linkedin">https://linkedin.com/in/deta-aditya</string>
    <string name="linkedin">LinkedIn</string>
    <string name="about_github">https://github.com/deta-aditya</string>
    <string name="github">GitHub</string>
    <string name="about_email">muhammaddetaaditya@gmail.com</string>
    <string name="email">Email</string>
    <string name="about_name">Muhammad Deta Aditya</string>
    <string name="disclaimer">Any content related to LOOΠΔ belongs to BlockBerry Creative</string>
    <string name="large_text">
        Lorem ipsum dolor sit amet, consecteteur adipiscing elit
    </string>
    <string name="action_settings">Settings</string>
    <string name="artists">Artists</string>
    <string name="album">Album</string>
    <string name="genres">Genres</string>
    <string name="lyricists">Lyricists</string>
    <string name="composers">Composers</string>
    <string name="arrangers">Arrangers</string>
    <string name="length">Length</string>
</resources>
