<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MemberDetailsActivity">
    
    <ImageView
        android:id="@+id/iv_member_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_member_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ting_tong"
                android:textAlignment="center"
                android:textSize="40sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                tools:text="Member Name" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/real_name"
                        android:textSize="16sp"
                        android:layout_marginEnd="32dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_member_real_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        tools:text="Real Name"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_date"
                        android:textSize="16sp"
                        android:layout_marginEnd="32dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_member_birth_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        tools:text="Birth Date"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debut_date"
                        android:textSize="16sp"
                        android:layout_marginEnd="32dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_member_debut_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        tools:text="Debut Date"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_unit"
                        android:textSize="16sp"
                        android:layout_marginEnd="32dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_member_subunit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        tools:text="Sub-unit"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/animal"
                        android:textSize="16sp"
                        android:layout_marginEnd="32dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_member_animal_representation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        tools:text="Animal"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>